; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/extr_spider_net.c_spider_net_refill_rx_chain.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/extr_spider_net.c_spider_net_refill_rx_chain.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.spider_net_card = type { %struct.spider_net_descr_chain }
%struct.spider_net_descr_chain = type { i32, %struct.TYPE_2__* }
%struct.TYPE_2__ = type { %struct.TYPE_2__*, i32 }

@SPIDER_NET_DESCR_NOT_IN_USE = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.spider_net_card*)* @spider_net_refill_rx_chain to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @spider_net_refill_rx_chain(%struct.spider_net_card* %0) #0 {
  %2 = alloca %struct.spider_net_card*, align 8
  %3 = alloca %struct.spider_net_descr_chain*, align 8
  %4 = alloca i64, align 8
  store %struct.spider_net_card* %0, %struct.spider_net_card** %2, align 8
  %5 = load %struct.spider_net_card*, %struct.spider_net_card** %2, align 8
  %6 = getelementptr inbounds %struct.spider_net_card, %struct.spider_net_card* %5, i32 0, i32 0
  store %struct.spider_net_descr_chain* %6, %struct.spider_net_descr_chain** %3, align 8
  %7 = load %struct.spider_net_descr_chain*, %struct.spider_net_descr_chain** %3, align 8
  %8 = getelementptr inbounds %struct.spider_net_descr_chain, %struct.spider_net_descr_chain* %7, i32 0, i32 0
  %9 = load i64, i64* %4, align 8
  %10 = call i32 @spin_trylock_irqsave(i32* %8, i64 %9)
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %13, label %12

12:                                               ; preds = %1
  br label %44

13:                                               ; preds = %1
  br label %14

14:                                               ; preds = %31, %13
  %15 = load %struct.spider_net_descr_chain*, %struct.spider_net_descr_chain** %3, align 8
  %16 = getelementptr inbounds %struct.spider_net_descr_chain, %struct.spider_net_descr_chain* %15, i32 0, i32 1
  %17 = load %struct.TYPE_2__*, %struct.TYPE_2__** %16, align 8
  %18 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %17, i32 0, i32 1
  %19 = load i32, i32* %18, align 8
  %20 = call i64 @spider_net_get_descr_status(i32 %19)
  %21 = load i64, i64* @SPIDER_NET_DESCR_NOT_IN_USE, align 8
  %22 = icmp eq i64 %20, %21
  br i1 %22, label %23, label %39

23:                                               ; preds = %14
  %24 = load %struct.spider_net_card*, %struct.spider_net_card** %2, align 8
  %25 = load %struct.spider_net_descr_chain*, %struct.spider_net_descr_chain** %3, align 8
  %26 = getelementptr inbounds %struct.spider_net_descr_chain, %struct.spider_net_descr_chain* %25, i32 0, i32 1
  %27 = load %struct.TYPE_2__*, %struct.TYPE_2__** %26, align 8
  %28 = call i64 @spider_net_prepare_rx_descr(%struct.spider_net_card* %24, %struct.TYPE_2__* %27)
  %29 = icmp ne i64 %28, 0
  br i1 %29, label %30, label %31

30:                                               ; preds = %23
  br label %39

31:                                               ; preds = %23
  %32 = load %struct.spider_net_descr_chain*, %struct.spider_net_descr_chain** %3, align 8
  %33 = getelementptr inbounds %struct.spider_net_descr_chain, %struct.spider_net_descr_chain* %32, i32 0, i32 1
  %34 = load %struct.TYPE_2__*, %struct.TYPE_2__** %33, align 8
  %35 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %34, i32 0, i32 0
  %36 = load %struct.TYPE_2__*, %struct.TYPE_2__** %35, align 8
  %37 = load %struct.spider_net_descr_chain*, %struct.spider_net_descr_chain** %3, align 8
  %38 = getelementptr inbounds %struct.spider_net_descr_chain, %struct.spider_net_descr_chain* %37, i32 0, i32 1
  store %struct.TYPE_2__* %36, %struct.TYPE_2__** %38, align 8
  br label %14

39:                                               ; preds = %30, %14
  %40 = load %struct.spider_net_descr_chain*, %struct.spider_net_descr_chain** %3, align 8
  %41 = getelementptr inbounds %struct.spider_net_descr_chain, %struct.spider_net_descr_chain* %40, i32 0, i32 0
  %42 = load i64, i64* %4, align 8
  %43 = call i32 @spin_unlock_irqrestore(i32* %41, i64 %42)
  br label %44

44:                                               ; preds = %39, %12
  ret void
}

declare dso_local i32 @spin_trylock_irqsave(i32*, i64) #1

declare dso_local i64 @spider_net_get_descr_status(i32) #1

declare dso_local i64 @spider_net_prepare_rx_descr(%struct.spider_net_card*, %struct.TYPE_2__*) #1

declare dso_local i32 @spin_unlock_irqrestore(i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
